<resources>
    <string name="app_name">MusicDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="followers">Followers</string>
    <string name="country">Country</string>
    <string name="product">Product</string>
</resources>
